// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton does not render the tooltip 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--tooltip security--button--icon--tooltip--bottom"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the 'bottom' tooltip 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--tooltip security--button--icon--tooltip--bottom"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the 'left' tooltip 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--tooltip security--button--icon--tooltip--left"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the 'lg' variation 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--lg security--button--icon--tooltip security--button--icon--tooltip--bottom"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the 'md' variation 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--md security--button--icon--tooltip security--button--icon--tooltip--bottom"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the 'right' tooltip 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--tooltip security--button--icon--tooltip--right"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the 'sm' variation 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--sm security--button--icon--tooltip security--button--icon--tooltip--bottom"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the 'top' tooltip 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--tooltip security--button--icon--tooltip--top"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the 'xl' variation 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--xl security--button--icon--tooltip security--button--icon--tooltip--bottom"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the disabled variation 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--tooltip security--button--icon--tooltip--bottom"
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;

exports[`IconButton renders the path variation 1`] = `
<button
  aria-label="Label"
  className="security--button--icon class security--button--icon--tooltip security--button--icon--tooltip--bottom"
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    className="class"
    height={null}
    path="M0"
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size={20}
    viewBox="0 0 32 32"
    width={null}
  />
</button>
`;
